// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render default button 1`] = `
"<button class=\\"er-button ellipsis er-button--middle er-button--default\\">
  <!----><span class=\\"er-button__text\\">Submit</span>
</button>"
`;

exports[`should trigger click event 1`] = `
"<button class=\\"er-button ellipsis er-button--large er-button--primary\\">
  <!----><span class=\\"er-button__text\\">Submit</span>
</button>"
`;

exports[`should trigger click event when loading or disabled 1`] = `
"<button class=\\"er-button ellipsis er-button--middle er-button--default\\">
  <!----><span class=\\"er-button__text\\">Submit</span>
</button>"
`;
